fix wordcloud on mobile

--- a/openhousens/static/css/style.css
+++ b/openhousens/static/css/style.css
@@ -587,6 +587,11 @@ blockquote {
   font-size: 1em;
 }
 
+/* Word cloud */
+
+.wordcloud {
+  height: 175px;
+}
 .cloud-word {
   cursor: pointer;
 }
